# foosbar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  physical_params.cpp  physical_params.hpp
.cache/clangd/index/: main.cpp.C30AC54CDD98CAB6.idx
assets/calibration/: calibration.yml
clearpath/: readme.txt
clearpath/hubDriverPkg/ExarKernelDriver/: README.txt  install_drvr  xr_usb_serial_common.c  xr_usb_serial_common.h  xr_usb_serial_hal.c  xr_usb_serial_ioctl.h
clearpath/sFoundationPkg/LibINI/inc/: dictionary.h  iniparser.h
clearpath/sFoundationPkg/LibINI/src/: dictionary.cpp  iniparser.cpp
clearpath/sFoundationPkg/LibLinuxOS/src/: tekEventsLinux.cpp  tekThreadsLinux.cpp  version.cpp
clearpath/sFoundationPkg/LibXML/inc/: ErrCodeStr.hpp
clearpath/sFoundationPkg/LibXML/src/: ErrCodeStr.cpp
clearpath/sFoundationPkg/SDK_Examples/Example-GPIO/: .cproject  .project  Example-GPIO.cpp  README.TXT
clearpath/sFoundationPkg/SDK_Examples/Example-Homing/: .cproject  .project  Example-Homing.cpp  README.TXT
clearpath/sFoundationPkg/SDK_Examples/Example-Motion/: .cproject  .project  Example-Motion.cpp  README.TXT
clearpath/sFoundationPkg/SDK_Examples/Example-MultiThreaded/: .cproject  .project  Axis.cpp  Axis.h  Example-MultiThreaded.cpp  README.TXT  Supervisor.cpp  Supervisor.h
clearpath/sFoundationPkg/SDK_Examples/Example-SingleThreaded/: .cproject  .project  Axis.cpp  Axis.h  Example-SingleThreaded.cpp  README.TXT
clearpath/sFoundationPkg/SDK_Examples/Example-StatusAlerts/: .cproject  .project  Example-StatusAlerts.cpp  README.TXT
clearpath/sFoundationPkg/SDK_Examples/HelloWorld/: .cproject  .project  HelloWorld.cpp  README.TXT
clearpath/sFoundationPkg/inc/inc-private/: version.h
clearpath/sFoundationPkg/inc/inc-pub/: TeknicDevID.h  mnErrors.h  pubCoreRegs.h  pubCpmAPI.h  pubCpmAdvAPI.h  pubCpmCls.h  pubCpmRegs.h  (+13 more)
clearpath/sFoundationPkg/sFoundation/: .cproject  .project  MNuserDriver20.xml
firmware/: platformio.ini
firmware/lib/epd4in2/: cascadia24.cpp  cascadia72.cpp  epd4in2.cpp  epd4in2.h  font24.cpp  fonts.h
firmware/src/: main.cpp
frontend/: .gitignore  .prettierrc  README.md  app.js  index.html  package-lock.json  package.json  vite.config.js
frontend/assets/: .gitattributes  table.glb
scripts/: calibration.py  defaultConfig.xml  fix_stuff.sh  hsv-picker.py
software/: CMakeLists.txt  algo.cpp  algo.hpp  main.cpp  physical_params.cpp  physical_params.hpp
(+30 files in other folders)
